--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           </div>
           <div class="input-container" data-aos="fade-up" data-aos-duration="800">
             <input required type="tel" name="extra_phone_number" />
-            <label>Phone number</label>
+            <label>Phone number (must be real)</label>
           </div>
           <div class="wrap_3_forms">
             <div class="input-container" data-aos="fade-up" data-aos-duration="800">
